<resources>
    <string name="app_name">Money Map</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="create_password">Create Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="remaining_balance">Remaining Balance:</string>
    <string name="enter_income">Enter income</string>
    <string name="enter_food_expense">Enter food expense</string>
    <string name="enter_gas_expense">Enter gas expense</string>
    <string name="enter_entertainment_expense">Enter entertainment expense</string>
    <string name="enter_savings">Enter savings</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="total_income">Total Income:</string>
    <string name="sign_out_button">Signout Button</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_charts">View Charts</string>
    <!-- Define the options for the period dropdown menu -->
    <string-array name="period_options">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <!-- Define the prompt for the period dropdown menu -->
    <string name="period_prompt">Select a period:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="error_email_empty">Please enter your email</string>
    <string name="error_password_empty">Please create a password</string>
    <string name="error_email_registered">Email is already registered</string>
    <string name="error_signup_failed">Error: Signup Failed</string>
    <string name="error_fetch_signin_methods">Unable to fetch sign-in methods. Please check your internet connection and try again.</string>
    <string name="already_registered">Already Registered?</string>
    <string name="go_to_sign_up">Back to Signup</string>
    <string name="line_chart">Line Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>

</resources>