<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:padding="8dp"
                android:maxWidth="488dp"
                android:stateListAnimator="@null"
                android:text="@string/sign_out"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyExpenseRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_income"
                android:maxWidth="488dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalIncomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxWidth="488dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="488dp"
                android:text="@string/remaining_balance"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/remainingBalanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:maxWidth="488dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Income and Expense input fields -->
            <EditText
                android:id="@+id/incomeEditText"
                android:layout_width="480dp"
                android:maxWidth="488dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="Income Editor"
                android:background="@color/white"
                android:hint="@string/enter_income"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/foodExpenseEditText"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxWidth="488dp"
                android:autofillHints="Food Expense"
                android:background="@color/white"
                android:hint="@string/enter_food_expense"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/gasExpenseEditText"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxWidth="488dp"
                android:autofillHints="Gas Expense"
                android:background="@color/white"
                android:hint="@string/enter_gas_expense"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/entertainmentExpenseEditText"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxWidth="488dp"
                android:autofillHints="Entertainment Expense"
                android:background="@color/white"
                android:hint="@string/enter_entertainment_expense"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/savingsEditText"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="Savings"
                android:background="@color/white"
                android:hint="@string/enter_savings"
                android:inputType="number"
                android:padding="16dp"
                android:maxWidth="488dp"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/periodSpinner"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:entries="@array/period_options"
                android:minHeight="48dp"
                android:prompt="@string/period_prompt" />


            <Button
                android:id="@+id/saveButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:maxWidth="320dp"
                android:stateListAnimator="@null"
                android:text="@string/save"
                android:layout_gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>
</ScrollView>
