<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/primaryBlue"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal" /> />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:backgroundTint="@android:color/holo_green_light"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:stateListAnimator="@null"
            android:onClick="onSignUpButtonClick" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>